--- a/文档/面试题.md
+++ b/文档/面试题.md
@@ -98,3 +98,43 @@ copyWithin()：复制数组的一部分到另一位置。
 flat() 和 flatMap()：扁平化数组。
 ```
 
+##### 10，事件循环
+
+```
+1.浏览器的进程模型
+何为进程？
+	程序运行需要有它自己的专属内存空间，可以把这块内存空间简单的理解问进程
+	每个应用至少有一个进程，进程之间相互独立，即使通信，需要双方同意
+2.浏览器是一个多进程多线程的应用程序
+3.主要进程分别有
+	浏览器进程：负责界面显示，用户交互，子进程管理等
+	网络进程：负责加载网络资源
+	渲染进程：开启渲染主线程，主线程负责执行HTML，CSS,JS代码，默认情况下，浏览器会为每个标签页开启一个新的渲染进程，以保证不同的标签页之前不相互影响
+4.渲染主线的如何工作
+	解析HTML
+	解析CSS
+	计算样式
+	布局
+	处理图层
+	每秒把页面画60次
+	执行全局JS代码
+	执行计时器的回调函数
+	.....
+事件循环：
+	在渲染主程序开始时会进入一个无限循环，每一次循环会检查消息队列是否存在任务如果有就会取出第一个任务执行完成后进行下一次循环，没有则进入休眠
+	其他所有线程可以随时向消息队列添加任务，会添加在消息队列的末尾。
+```
+
+##### 11.何为异步
+
+```
+JS是一门单线程的语言，这是因为它运行在浏览器的渲染主线程中，而渲染主线程只有一个，而渲染主线程承担着很多工作，渲染页面，执行JS都在其中运行，如果使用同步的方式，就极有可能导致主线程产生阻塞，从而导致消息队列中的很多其他任务无法得到执行，导致页面卡死，所有浏览器采用异步的方式来避免的，讲计时器，网络，事件监听等这类任务交给其他线程执行，当其他线程完成时，将事先传递的回调函数包装成任务，加入到消息队列的末尾去排队，等待主线程调度执行
+
+单线程是异步的产生的原因
+事件循环是异步的实现方式
+
+微队列
+交互队列
+延时队列
+```
+
