--- a/文档/面试题.md
+++ b/文档/面试题.md
@@ -138,3 +138,56 @@ JS是一门单线程的语言，这是因为它运行在浏览器的渲染主线
 延时队列
 ```
 
+##### 十二，echarts更新数据如何重新渲染
+
+```
+myChart.clear(); myChart.setOption(option);
+```
+
+##### 十三，echarts渲染大量数据导致页面卡顿怎么解决
+
+```js
+1.关闭动画：ECharts默认的动画效果会消耗一些性能，
+		对于大数据量的图表，可以尝试关闭动画。
+		let option = {
+          animation: false, //关闭动画
+          series: [
+            // ...
+          ]
+        };
+        echarts.setOption(option);
+
+2.使用 large 模式： ECharts 在 series 中提供了一个 large 选项，
+				当数据量特别大（如超过千条数据）时，
+                可以尝试开启 large 模式，
+                此模式下会对绘制进行优化。
+                let option = {
+                  series: [
+                    {
+                      type: 'scatter',
+                      large: true,
+                      data: largeData,
+                    },
+                  ],
+                };
+                echarts.setOption(option);
+
+3.启用进度渲染：对于特别大的数据集，
+			我们可以启用 ECharts 的渲染进度条。
+            这可以让用户知道渲染的进度，
+            同时也可以避免浏览器在渲染过程中出现无响应的现象。
+            let option = {
+              series: [{
+                type: 'lines',
+                data: largeData,
+                // 开启渐进式渲染
+                progressive: 2000,
+                // 渲染阈值，大于此值则启动渐进渲染
+                progressiveThreshold: 5000,
+              }],
+            };
+            echarts.setOption(option);
+
+4.数据进行筛选和抽样来减少渲染点数
+```
+
