--- a/文档/面试题.md
+++ b/文档/面试题.md
@@ -191,3 +191,78 @@ myChart.clear(); myChart.setOption(option);
 4.数据进行筛选和抽样来减少渲染点数
 ```
 
+##### 十四，webSocket
+
+```js
+第一步：
+	创建webSocket，并且拿到实例
+    let socket = new webSocket("ws://地址")
+第二步：
+	建立相关规则
+    let reconnectInterval = 5000; // 5秒后重试连接
+    let pingInterval = 30000; // 每30秒发送一次ping
+    let pingTimeout = 10000; // 如果10秒内没有响应，则认为连接断开
+    let reconnectAttempts = 0; // 当前重连尝试次数
+    const maxReconnectAttempts = 10; // 最大重连次数，防止无限重连
+    let lastPingTime = Date.now(); // 用来记录上次发送ping消息的时间
+	let IntervalId //存放定时器id
+第三步：
+	webSocket连接成功后，触发实例中onopen函数
+    在onopen函数中创建一个循环定时器，
+    重置重连次数
+    socket.onopen=()=>{
+        reconnectAttempts = 0; // 重连次数归零
+        IntervalId=setInterval(()=>{
+            if(Date.now()-lastPingTime>pingTimeout){
+                reconnect(); // 如果超时未收到响应，则尝试重连
+            }else{
+                // 发送 ping 消息到服务器，保持连接活跃
+                socket.send(JSON.stringify({ type: 'ping' }));
+            }
+        },pingInterval)
+    }
+    
+    当接收到后端的消息是触发实例的中onmessage函数
+    socket.onmessage=(event)=>{
+        const message = JSON.parse(event.data); // 解析收到的消息
+        // 如果收到的消息是 pong，则更新最后 ping 的时间
+        if(message.type === 'pong'){
+            lastPingTime = Date.now() // 收到 pong 时更新时间
+        }
+    }
+    
+    // WebSocket 出现错误时的处理逻辑
+    socket.onerror = (error) => {
+        console.error('WebSocket Error: ', error);
+    };
+
+    // WebSocket 关闭时的处理逻辑
+    socket.onclose = () => {
+        console.log('WebSocket closed');
+        clearInterval(IntervalId); // 清除心跳定时器
+    };
+第四步：
+	重连的逻辑
+    function reconnect() {
+        // 如果达到最大重连次数，则不再重试
+        if (reconnectAttempts >= maxReconnectAttempts) {
+            console.log('Max reconnect attempts reached');
+            return;
+        }
+
+        reconnectAttempts++; // 增加重连尝试次数
+        console.log(`Reconnecting... Attempt ${reconnectAttempts}`);
+
+        // 如果当前 WebSocket 连接还在，先关闭它
+        if (socket && socket.readyState !== WebSocket.CLOSED) {
+            console.log('Closing the previous WebSocket connection');
+            socket.close(); // 关闭现有连接
+        }
+
+        // 设置延迟，避免过于频繁的重连
+        setTimeout(() => {
+            connect(); // 重新建立连接
+        }, reconnectInterval); // 每次重连间隔为 5 秒
+    }
+```
+
