--- a/文档/面试题.md
+++ b/文档/面试题.md
@@ -1,5 +1,3 @@
-### 面试题
-
 ##### 1.webPack5的主要升级点有哪些？
 
 ```
@@ -264,5 +262,20 @@ myChart.clear(); myChart.setOption(option);
             connect(); // 重新建立连接
         }, reconnectInterval); // 每次重连间隔为 5 秒
     }
+```
+
+##### 十五，浏览器是如何渲染页面的？
+
+```html
+当浏览器的网络线程收到HTML文档后，会产生一个渲染任务，并将其传递给渲染主线程的消息队列
+在事件循环机制的作用下，渲染主线程取出消息队列的渲染任务，开启渲染流程
+```
+
+<img src="./浏览器页面渲染过程.png">
+
+##### 十六，解析HTML
+
+```
+
 ```
 
